--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -47,11 +47,12 @@ button:hover {
 .popover {
     visibility: hidden;
     background-color: #FAFAFA;
-    margin: 5.5% -20.5% ;
+    margin: 5.5% auto auto calc(-20% - 1px);
     padding: 5% 10%;
     width: 100%;
     border-top: 0px;
     border: 1px solid #DDDDDD;
+    border-radius: 4px;
 }
 
 .locations:hover .popover{
